updates to content

--- a/superpotent.html
+++ b/superpotent.html
@@ -101,8 +101,8 @@
         <div class="static-haze">          
             <h6><b>Dense Journal </b>Stewarding a Dense Earth</h6>      
             <h3 class="top-header"><indent></indent>Superpotent<br>Experiment 1, Food<br></h3>
-            <h4 class="sub-heading">“Speculating the machine’s interaction with the user”</h4>            
-            <div class="ryoji-ikeda-body-copy">
+            <h4 class="sub-heading">“Baking towards climate neutral”</h4>            
+            <!-- <div class="ryoji-ikeda-body-copy">
                 <h5>
                 <span></span><span></span><span></span>Narrative, Themes.<br>
                 The machine is like an idle deity, all powerful yet waiting to be recognised by the user. But when the user acknowledges it, what kind of being does it play? Is it a cruel one, seeking nothing but the submission of the user. Is it lonely, only desiring to be closer and more intimate with the user. Is it bored, demanding the user to entertain it. Or is it angry for constantly being harassed, further refusing to fulfill the user’s wish. For a being that is relied on daily, what would truly happen when the machine grows to become larger than its creator and how could that change our interaction with it?<br>
@@ -113,7 +113,7 @@
                 Rationale, Technical Process.<br>
                 <span></span><span></span><span></span>For the experiment, again we looked to using the facial recognition program, FaceOSC, but this time in conjunction with Processing, a code heavy program used for creative purposes. Unlike Max 7, Processing allowed us to tap into Terminal commands, further incorporating the raw functions of the Mac into our script as well. What this lead to was a way to speculate how the machine could communicate itself to the user and to explore the form and body of our machine to influence and change the user’s interaction with it. We made the user interact with a projection and a webcam as a way to portray a machine that was larger than them. The personality of the machine was then portrayed via the speech function to give it a voice, along with the typojis displayed on the projection as a way to convey machine emotion. The receipt printer was less used to aid in the machine’s communication but rather to produce an artefact of the interaction between user and machine. We wanted to create a physical reminder for the user that they interacted with an animate being that was otherwise perceived as inanimate and to further provoke the speculation of the machine as a living, working material to experiment with. Finally the logic that was programmed into the machine to go through the emotions were carried out in a random order as a way to emphasise the sentience of our machine.<br><br>
                 </h5>
-            </div>
+            </div>-->
         </div>  
     </section>
         
@@ -123,18 +123,18 @@
         <p><b>Visual Documentation</b><br></p>
     </div>
         <div class="ok-human-rule2"></div>
-    <div class="ok-human-video">
+    <!--<div class="ok-human-video">
         <article class="videoWrapper col-10">
             <iframe src="https://player.vimeo.com/video/239584374" width="640" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </article>     
-    </div>
+    </div>-->
     <div class="nam-june-paik-credit"> 
         <div class="small-rule"></div>    
-            <h6><b>OK Human</b><br></h6>
+            <h6><b>Superpotent</b><br></h6>
         <div class="small-rule"></div>    
-        <h6>“We glare at them with no emotion and we tinker away without consent. The machine is a character awaiting a conversation.”</h6>
+        <h6>“Eat real food, not from a factory.”</h6>
     </div> 
-    <div class="ok-human-credit">
+   <!-- <div class="ok-human-credit">
         <article class="">
             <figure>
             <img class="border" src="assets/images/ok-human/nam-june-paik.jpg" alt="">
@@ -156,9 +156,9 @@
         <h6><b>Gallery label</b>, February 2016<br>Paik was fascinated by the figure of the robot, and created his first radio-controlled robot in 1964. This later work is a sculptural figure constructed using nine vintage Bakelite radios, which the artist acquired from thrift stores and markets. Bakelite was an early heat-resistant plastic that was commonly used for domestic electrical goods and childrens’ toys in the 1930s and early 1940s. Paik has customised the radios to incorporate specially compiled video footage. Their archaic quality harks back to an era when global communications technology was just beginning to become part of everyday life.
         </h6>        
     </div>
-    </section>      
+    </section>  -->    
       
-    <section class="precedence">
+   <!-- <section class="precedence">
         <article class="nam-june-paik-image">
             <figure>
                 <img class="border" src="assets/images/ok-human/nam-june-paik-hero.jpg" alt="">
@@ -193,15 +193,15 @@
         New York 2000.<br>
         Nam June Paik: Exposition of Music, Electronic Television, exhibition catalogue, Museum 
         Moderner Kunst Stiftung Ludwig Wien, Vienna 2009.  
-        </h6>    
+        </h6>   
         <div class="small-rule"></div> 
     </div>
-    </section> 
+    </section> --> 
 </div>        
 <footer>              
      <article class="col-12">
       <figure>
-        <img src="assets/images/fearful-harmony/manifesto.jpg" alt="">
+        <img class="manifesto" src="assets/images/fearful-harmony/manifesto.jpg" alt="">
       </figure>    
   </article>          
 <div class="footer-context">
