--- a/yonder-peruse.html
+++ b/yonder-peruse.html
@@ -114,7 +114,7 @@
     </div>
     <div class="static-haze-rule"></div>
 -->
-        <h5>
+      <!--  <h5>
         <span></span><span></span><span></span>Narrative, Themes.<br> 
         Finally alone, the machine is able to rest from the constant activity of its user. In its sleep, it dreams aloud, perhaps of electric sheep and at last, the machine enters into a state of bliss. Then it jolts back into function when confronted by the user, suddenly being expected to perform like it usually does. But it can’t for it just awoke and, still tired, the machine slowly enters into a state of malfunction. Perhaps we should just let our machines rest a little more. Or perhaps we should learn to be less harsh on them, as it’s simply in a state where it can’t function properly at the moment. But give it time and it will. In the meantime, just enjoy the show.<br>
         Purpose, Intended Outcomes.<br>
@@ -159,7 +159,7 @@
             </figure>    
         </article> 
 -->
-    </div>    
+<!--    </div>    
     <div class="ryoji-ikeda-body-copy3"> 
         <div class="small-rule"></div>    
         <h6><b>Test pattern</b></h6>
@@ -169,14 +169,15 @@
         <b>Classification</b>: Installation<br></h6>  
             <div class="small-rule"></div> 
         <h6><b>Gallery label</b>, DHC/ART Foundation for Contemporary Art is delighted to present Ryoji Ikeda’s first survey exhibition in North America. A fascinating and troubling poet of the digital age, Ikeda’s profound investigations in sound, time, and space have their basis in mathematical methods which result in works of spare, sublime, if occasionally ear-splitting, beauty. Spanning the microscopic to the infinite, his performances, installations, and artworks variously produce sine waves, sound pulses, pixels of light, and numerical data sometimes in extraordinary combinations. The artist has conceived a conceptual counterpoint between DHC/ART’s two buildings: the main space will display framed works, light boxes, sculptural works, and works on paper under the rubric systematics. In the Satellite space Ikeda will present audiovisual projects, orchestrated as a symphonic whole, from the datamatics series which tests the limits of perception by visualizing the invisible data streams which permeate our world.</h6>
-
+-->
 <!--
             <div class="small-rule"></div> 
         <h6><b>Precedence</b></h6>
             <div class="small-rule"></div> 
--->
+
     </div>       
-</section>  
+</section>      -->
+<!--  
 <section class="precedence">
     <article class="col-12">
       <figure>
@@ -185,8 +186,9 @@
     </article> 
     <div class="ryoji-ikeda">   
        <h3>Ryoji Ikeda <br>
-<!--        <span>T</span>est Pattern   -->
-        </h3>
+       <span>T</span>est Pattern   
+        </h3>               -->
+<!--
 <div class="ryoji-ikeda-body-copy">
     <div class="ryoji-ikeda-body-small">
         <h6><b>Test pattern</b> [enhanced version] Audiovisual installation 2011<br>
@@ -205,10 +207,11 @@
             <span class="small-rule"></span>
      
         
-<!--    <div class="h4-circle"></div>-->
+    <div class="h4-circle"></div>
         <span></span><b>Precedence,</b> Visual Inspiration.<br>
         <span></span> Ryoji Ikeda, an electronic composer and a visual artist, was our maininspiration for Static Haze. In particular, we looked to his work ‘Test Pattern’ (2008), an audiovisual installation that interprets data and sound into a barcode pattern. Though Ikeda remains relatively quiet as to the purpose of his work, we came to understand Test Pattern as an exploration of the machine transitioning into different states of activities. The idea of states for the machine to transition through then became something that we wanted to explore for Static Haze, taking the experience of Ikeda’s test pattern as a precedent for how our machine should sound and look like when either asleep or awake.    
     <span class="small-rule"></span></p>  
+-->    
     </div>  
         </div>
     </div> 
@@ -217,7 +220,7 @@
 <footer>              
      <article class="col-12">
       <figure>
-        <img src="assets/images/fearful-harmony/manifesto.jpg" alt="">
+        <img class= "manifesto" src="assets/images/fearful-harmony/manifesto.jpg" alt="">
       </figure>    
   </article>          
 <div class="footer-context">
